2009-05-27 Braden McDaniel  <braden@endoframe.com>

	On Windows, use the registry to get the default data directory,
	script module path, and node module path.

	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj:
	Added conf.{cpp,h}.
	* src/libopenvrml/openvrml/local/component.cpp
	(openvrml::local::component_registry::component_registry()):
	Delegate to openvrml::local::conf::datadir to get the data
	directory.
	* src/libopenvrml/openvrml/local/conf.cpp: Added file.
	* src/libopenvrml/openvrml/local/conf.h: Added file.
	* src/libopenvrml/openvrml/local/node_metatype_registry_impl.cpp
	(openvrml::local::node_metatype_registry_impl::node_metatype_registry_impl(openvrml::browser&)):
	Delegate to openvrml::local::conf::node_path to get the node
	module path.
	* src/libopenvrml/openvrml/script.cpp
	(openvrml::script_factory_registry::impl::impl()): Delegate to
	openvrml::local::conf::script_path to get the script module path.

2009-05-25 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/lod.cpp
	(lod_node::do_render_child(openvrml::viewer &, const
	openvrml::rendering_context)): The Microsoft compiler doesn't like
	"using openvrml::node" here for some reason.

2009-05-13 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/curlbrowserhost.cpp
	(openvrml_player_curl_browser_host_curl_source_callback(gpointer)):
	Make sure NewStream gets called before calling DestroyStream in
	cases where no data was written to the stream.

2009-05-13 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/image_texture.cpp
	(image_texture_node::update_texture()): Make sure the stream is
	valid before reading it.

2009-05-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/local/parse_vrml.h
	(openvrml::local::vrml97_parse_actions::on_externproto_t::operator()(const
	std::string &, const node_interface_set &, const
	std::vector<std::string> &) const): Catch (and swallow) any